--- a/style.css
+++ b/style.css
@@ -1,26 +1,31 @@
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-body{
-  background-image: url('./images/pattern-background-desktop.svg');
-  background-color: hsl(225, 100%, 98%);
-  height: 100vh;
-  width: 100vw;
+
+body {
+    font-family: 'Red Hat Display',
+        sans-serif;
+    min-height: 100vh;
+    background-image: url(https://www.digitshack.com/codepen/mentor1/pattern-background-desktop.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: hsl(225, 100%, 94%);
+    position: relative;
+    font-size: 16px;
 }
-.main {
-  border: 1px solid #000;
-  width: 1440px;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+
+.container {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 450px;
+    background: white;
+    border-radius: 20px;
+    overflow: hidden;
 }
-.main-content {
- text-align: center;
- border: 1px solid #000;
-}
-.background {
-  background-color: #fff;
-}
+
