--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ body {
   height: 50px;
   border-radius: 20px;
   background-color: hsl(245, 75%, 52%);
-  box-shadow: 0px 9px 15px 5px #CDCCFF;
+  box-shadow: 0px 9px 15px 5px #cdccff;
 }
 .proceed-btn {
   text-align: center;
@@ -91,7 +91,6 @@ body {
 }
 .cancel {
   margin-top: 50px;
-
 }
 .cancel-btn {
   text-decoration: none;
